--- a/src/template/makeUp.css
+++ b/src/template/makeUp.css
@@ -17,6 +17,10 @@
 -fx-border-color: rgba(255,255,255,0.3);;
 -fx-border-insets: 1;
 -fx-border-width: 1;
+}
 
+.nextBtn{
+-fx-background-color: #6633AA;
+-fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
