--- a/src/template/splash.fxml
+++ b/src/template/splash.fxml
@@ -17,23 +17,15 @@
         <StackPane prefHeight="400.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <ImageView fitHeight="400.0" fitWidth="500.0" pickOnBounds="true" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <image>
-                <Image url="@bg.png" />
+                <Image url="@splashbg.jpg" />
             </image>
         </ImageView>
-        <ImageView blendMode="SRC_ATOP" fitHeight="400.0" fitWidth="500.0" layoutY="-40.0" pickOnBounds="true" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+        <ImageView blendMode="SRC_ATOP" fitHeight="235.0" fitWidth="294.0" layoutX="-8.0" layoutY="8.0" pickOnBounds="true" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <image>
                 <Image url="@logoTransparent.png" />
             </image>
         </ImageView>
-        <Label layoutX="164.0" layoutY="247.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="182.0" text="Welcome" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
-            <GridPane.margin>
-                <Insets left="180.0" top="210.0" />
-            </GridPane.margin>
-            <font>
-                <Font name="Florencesans SC" size="37.0" />
-            </font>
-        </Label>
-        <RadioButton fx:id="windowsBtn" layoutX="290.0" layoutY="329.0" mnemonicParsing="false" onAction="#setOperatingSystemWindows" text="Windows" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+        <RadioButton fx:id="windowsBtn" layoutX="263.0" layoutY="337.0" mnemonicParsing="false" onAction="#setOperatingSystemWindows" text="Windows" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <GridPane.margin>
                 <Insets left="220.0" top="310.0" />
             </GridPane.margin>
@@ -41,17 +33,17 @@
             <ToggleGroup fx:id="operatingSystem" />
          </toggleGroup>
         </RadioButton>
-        <RadioButton fx:id="macBtn" layoutX="379.0" layoutY="329.0" mnemonicParsing="false" onAction="#setOperatingSystemMac" text="Mac" toggleGroup="$operatingSystem" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+        <RadioButton fx:id="macBtn" layoutX="348.0" layoutY="337.0" mnemonicParsing="false" onAction="#setOperatingSystemMac" text="Mac" toggleGroup="$operatingSystem" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <GridPane.margin>
                 <Insets left="310.0" top="310.0" />
             </GridPane.margin>
         </RadioButton>
-        <Label layoutX="7.0" layoutY="325.0" text="Please select your operating system:" textFill="#1e3cb2" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+        <Label layoutX="14.0" layoutY="332.0" text="Please select your operating system:" textFill="WHITE" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <GridPane.margin>
                 <Insets left="20.0" top="310.0" />
             </GridPane.margin>
             <font>
-                <Font name="Papyrus" size="17.0" />
+                <Font name="Latha Bold" size="14.0" />
             </font>
         </Label>
         <Button layoutX="423.0" layoutY="359.0" mnemonicParsing="false" onAction="#goToRename" prefHeight="25.0" prefWidth="63.0" text="Next &gt;&gt;" />
