--- a/src/template/makeUp.css
+++ b/src/template/makeUp.css
@@ -5,7 +5,7 @@
 }
 
 .screenButton{
--fx-background-color: #2E354F;
+-fx-background-color: rgba(46,53,79,0.3);
 -fx-border-color: rgba(100,100,100,0.3);;
 -fx-border-insets: 0;
 -fx-border-width: 1;
@@ -13,7 +13,7 @@
 }
 
 .activeScreenButton{
--fx-background-color: #6633AA;
+-fx-background-color: rgba(102,51,170,0.5);
 -fx-border-color: rgba(255,255,255,0.3);;
 -fx-border-insets: 1;
 -fx-border-width: 1;
