--- a/src/template/options.fxml
+++ b/src/template/options.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.optionsController">
+<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.optionsController">
     <children>
         <StackPane prefHeight="600.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Canvas height="600.0" width="800.0" />
@@ -52,6 +56,45 @@
         <Button fx:id="renameBtn" layoutY="65.0" mnemonicParsing="false" onAction="#goToRename" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" />
         <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" textFill="WHITE" />
-
+      <Label layoutX="197.0" layoutY="145.0" text="Current Working Directory:" textFill="WHITE" />
+      <Button fx:id="cwdBtn" layoutX="196.0" layoutY="203.0" mnemonicParsing="false" text="Change Directory" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="196.0" layoutY="167.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
+      <Label fx:id="cwdLabel" layoutX="197.0" layoutY="167.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="197.0" layoutY="270.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
+      <Button fx:id="nciBtn" layoutX="197.0" layoutY="306.0" mnemonicParsing="false" text="Change Input" />
+      <Label fx:id="nciLabel" layoutX="198.0" layoutY="270.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
+      <Label layoutX="197.0" layoutY="248.0" prefHeight="17.0" prefWidth="151.0" text="Naming Convention Input:" textFill="WHITE" />
+      <Button fx:id="ncoBtn" layoutX="194.0" layoutY="410.0" mnemonicParsing="false" text="Change Output" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="374.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
+      <Label fx:id="ncoLabel" layoutX="195.0" layoutY="374.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
+      <Label layoutX="194.0" layoutY="352.0" prefHeight="17.0" prefWidth="157.0" text="Naming Convention Output:" textFill="WHITE" />
+      <Button fx:id="cdtbtn" layoutX="194.0" layoutY="516.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Change Date Tolderance">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="480.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="133.0" />
+      <Label fx:id="dtLabel" layoutX="195.0" layoutY="480.0" prefHeight="25.0" prefWidth="133.0" styleClass="labelBG" />
+      <Label layoutX="194.0" layoutY="458.0" prefHeight="17.0" prefWidth="170.0" text="Date Tolerance (MM/DD/YYYY):" textFill="WHITE" />
+        <RadioButton fx:id="windowsBtn" layoutX="405.0" layoutY="484.0" mnemonicParsing="false" onAction="#setOperatingSystemWindows" text="Windows" textFill="WHITE" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+            <GridPane.margin>
+                <Insets left="220.0" top="310.0" />
+            </GridPane.margin>
+            <toggleGroup>
+                <ToggleGroup fx:id="operatingSystem" />
+            </toggleGroup>
+        </RadioButton>
+        <RadioButton fx:id="macBtn" layoutX="486.0" layoutY="480.0" mnemonicParsing="false" onAction="#setOperatingSystemMac" prefHeight="25.0" prefWidth="60.0" text="Mac" textFill="WHITE" toggleGroup="$operatingSystem" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
+            <GridPane.margin>
+                <Insets left="310.0" top="310.0" />
+            </GridPane.margin>
+        </RadioButton>
+      <Label layoutX="401.0" layoutY="458.0" prefHeight="17.0" prefWidth="170.0" text="Select Operating System:" textFill="WHITE" />
+      <Button fx:id="cosBtn" layoutX="405.0" layoutY="513.0" mnemonicParsing="false" text="Change Operating System">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
+      <Button fx:id="defaultBtn" layoutX="685.0" layoutY="561.0" mnemonicParsing="false" text="Reset to Default" />
     </children>
 </AnchorPane>
