--- a/src/template/rename.fxml
+++ b/src/template/rename.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.renameController">
+<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.renameController">
     <children>
         <StackPane prefHeight="600.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Canvas height="600.0" width="800.0" />
@@ -50,8 +50,8 @@
             <Image url="@rename.png" />
          </image>
       </ImageView>
-      <TextField layoutX="200.0" layoutY="183.0" prefHeight="26.0" prefWidth="460.0" />
-      <Label layoutX="200.0" layoutY="157.0" prefHeight="26.0" prefWidth="132.0" text="Select a Directory" textAlignment="CENTER" textFill="WHITE">
+      <TextField fx:id="cwdLabel" layoutX="200.0" layoutY="183.0" prefHeight="26.0" prefWidth="460.0" />
+      <Label layoutX="200.0" layoutY="157.0" prefHeight="26.0" prefWidth="185.0" text="Current Working Directory" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="15.0" />
          </font>
@@ -59,7 +59,19 @@
         <Button fx:id="renameScreenBtn" layoutY="65.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" />
         <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" onAction="#goToOptions" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
-      <Button layoutX="200.0" layoutY="215.0" mnemonicParsing="false" text="Chose Directory Path" />
+      <Button fx:id="renameFilesBtn" layoutX="387.0" layoutY="512.0" mnemonicParsing="false" text="Rename Files" />
+      <TextField fx:id="incLabel" layoutX="198.0" layoutY="254.0" prefHeight="26.0" prefWidth="460.0" />
+      <Label layoutX="198.0" layoutY="228.0" prefHeight="26.0" prefWidth="205.0" text="Finding files that look like:" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="oncLabel" layoutX="198.0" layoutY="326.0" prefHeight="26.0" prefWidth="460.0" />
+      <Label layoutX="198.0" layoutY="300.0" prefHeight="26.0" prefWidth="205.0" text="Changing them to:" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
 
     </children>
 </AnchorPane>
