--- a/src/template/options.fxml
+++ b/src/template/options.fxml
@@ -14,8 +14,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-
 <AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.optionsController">
     <children>
         <StackPane prefHeight="600.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -56,7 +54,7 @@
          </image>
       </ImageView>
         <Button fx:id="renameBtn" layoutY="65.0" mnemonicParsing="false" onAction="#goToRename" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" />
-        <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
+        <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" textFill="WHITE" />
       <Label layoutX="197.0" layoutY="145.0" text="Current Working Directory:" textFill="WHITE" />
       <Button fx:id="cwdBtn" layoutX="196.0" layoutY="203.0" mnemonicParsing="false" text="Change Directory" />
@@ -70,7 +68,7 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="374.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
       <Label fx:id="ncoLabel" layoutX="195.0" layoutY="374.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
       <Label layoutX="194.0" layoutY="352.0" prefHeight="17.0" prefWidth="157.0" text="Naming Convention Output:" textFill="WHITE" />
-      <Button fx:id="cdtbtn" layoutX="194.0" layoutY="516.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Change Date Tolderance">
+      <Button fx:id="cdtbtn" layoutX="194.0" layoutY="514.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="133.0" text="Change Date Tolerance">
          <font>
             <Font size="10.0" />
          </font>
@@ -92,7 +90,7 @@
             </GridPane.margin>
         </RadioButton>
       <Label layoutX="401.0" layoutY="458.0" prefHeight="17.0" prefWidth="170.0" text="Select Operating System:" textFill="WHITE" />
-      <Button fx:id="cosBtn" layoutX="405.0" layoutY="513.0" mnemonicParsing="false" text="Change Operating System">
+      <Button fx:id="cosBtn" layoutX="405.0" layoutY="513.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="130.0" text="Change Operating System">
          <font>
             <Font size="10.0" />
          </font>
