--- a/src/template/rename.fxml
+++ b/src/template/rename.fxml
@@ -57,7 +57,7 @@
          </font>
       </Label>
         <Button fx:id="renameScreenBtn" layoutY="65.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" />
-        <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
+        <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" onAction="#goToDelete" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" onAction="#goToOptions" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
       <Button fx:id="renameFilesBtn" layoutX="387.0" layoutY="512.0" mnemonicParsing="false" text="Rename Files" />
       <TextField fx:id="incLabel" layoutX="198.0" layoutY="254.0" prefHeight="26.0" prefWidth="460.0" />
