you can actually type things into the options screen now

--- a/src/template/options.fxml
+++ b/src/template/options.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -62,19 +63,15 @@
       <Label fx:id="cwdLabel" disable="true" layoutX="197.0" layoutY="167.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="197.0" layoutY="270.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
       <Button fx:id="nciBtn" layoutX="197.0" layoutY="306.0" mnemonicParsing="false" onAction="#setInput" text="Change Input" />
-      <Label fx:id="nciLabel" layoutX="198.0" layoutY="270.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
       <Label layoutX="197.0" layoutY="248.0" prefHeight="17.0" prefWidth="158.0" text="Naming Convention Input:" textFill="WHITE" />
       <Button fx:id="ncoBtn" layoutX="194.0" layoutY="410.0" mnemonicParsing="false" onAction="#setOutput" text="Change Output" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="374.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="568.0" />
-      <Label fx:id="ncoLabel" layoutX="195.0" layoutY="374.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
       <Label layoutX="194.0" layoutY="352.0" prefHeight="17.0" prefWidth="170.0" text="Naming Convention Output:" textFill="WHITE" />
       <Button fx:id="cdtbtn" layoutX="194.0" layoutY="514.0" mnemonicParsing="false" onAction="#setDate" prefHeight="32.0" prefWidth="133.0" text="Change Date Tolerance">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="480.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="133.0" />
-      <Label fx:id="dtLabel" layoutX="195.0" layoutY="480.0" prefHeight="25.0" prefWidth="133.0" styleClass="labelBG" />
       <Label layoutX="194.0" layoutY="458.0" prefHeight="17.0" prefWidth="190.0" text="Date Tolerance (MM/DD/YYYY):" textFill="WHITE" />
         <RadioButton fx:id="windowsBtn" layoutX="405.0" layoutY="484.0" mnemonicParsing="false" text="Windows" textFill="WHITE" GridPane.columnSpan="2147483647" GridPane.rowSpan="2147483647">
             <GridPane.margin>
@@ -96,5 +93,8 @@
          </font>
       </Button>
       <Button fx:id="defaultBtn" layoutX="685.0" layoutY="561.0" mnemonicParsing="false" onAction="#clearOptions" text="Reset to Default" />
+      <TextField fx:id="dtTextField" layoutX="193.0" layoutY="479.0" prefHeight="25.0" prefWidth="133.0" />
+      <TextField fx:id="nciTextField" layoutX="192.0" layoutY="270.0" prefHeight="26.0" prefWidth="575.0" />
+      <TextField fx:id="ncoTextField" layoutX="192.0" layoutY="374.0" prefHeight="25.0" prefWidth="575.0" />
     </children>
 </AnchorPane>
