--- a/src/template/delete.fxml
+++ b/src/template/delete.fxml
@@ -3,16 +3,18 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.deleteController">
+<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.deleteController">
     <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="254.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="575.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="196.0" layoutY="190.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="575.0" />
         <StackPane prefHeight="600.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Canvas height="600.0" width="800.0" />
         <Button fx:id="helpBtn" layoutY="553.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="126.0" text="Help ?" />
@@ -50,23 +52,25 @@
                 <Image url="@delete.png" />
             </image>
         </ImageView>
-        <TextField fx:id="cwdLabel" layoutX="200.0" layoutY="183.0" prefHeight="26.0" prefWidth="460.0" />
-        <Label layoutX="200.0" layoutY="157.0" prefHeight="26.0" prefWidth="185.0" text="Current Working Directory" textAlignment="CENTER" textFill="WHITE">
+        <Label layoutX="200.0" layoutY="157.0" prefHeight="26.0" prefWidth="185.0" text="Current Working Directory:" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="15.0" />
 
             </font>
+
+
         </Label>
         <Button fx:id="renameScreenBtn" layoutY="65.0" mnemonicParsing="false" onAction="#goToRename" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" />
         <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" onAction="#goToOptions" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
         <Button fx:id="deleteFilesBtn" layoutX="315.0" layoutY="512.0" mnemonicParsing="false" onAction="#deleteBtnTrigger" text="Reccomend Files for Deletion" />
-        <TextField fx:id="dtLabel" layoutX="198.0" layoutY="254.0" prefHeight="26.0" prefWidth="460.0" />
         <Label layoutX="198.0" layoutY="228.0" prefHeight="26.0" prefWidth="319.0" text="Finding files that haven't been touched since:" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="15.0" />
             </font>
         </Label>
+      <Label fx:id="cwdLabel" disable="true" layoutX="200.0" layoutY="190.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
+      <Label fx:id="dtLabel" disable="true" layoutX="200.0" layoutY="254.0" prefHeight="25.0" prefWidth="575.0" styleClass="labelBG" />
 
     </children>
 </AnchorPane>
